deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-crafters-deployment
  labels:
    app: content-crafters
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content-crafters
  template:
    metadata:
      labels:
        app: content-crafters
    spec:
      automountServiceAccountToken: false
      containers:
        - name: content-crafters
          image: gcr.io/pa2024-421814/content-crafters:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "0.5"
              memory: "256Mi"
