service.yaml
apiVersion: v1
kind: Service
metadata:
  name: content-crafters-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: content-crafters
