ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: content-crafters-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: content-crafters.code-valley.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: content-crafters-service
                port:
                  number: 80
